Release notes
=============

master
------

Improvements:

 - User-defined commands no longer needs to always be prefixed with '!'.
 - Add auto-configuration for Cygwin (OS name: CYGWIN_NT-6.1). (GH #92)
 - Add toggling for display files of untracked directories.
 - Add main view pager mode that reads git-log's '--pretty=raw' data
   from stdin, e.g. `git reflog --pretty=raw | tig --pretty=raw`.
 - Document the Git commands supported by the pager mode.  (GH #1)

Bug fixes:

 - Fix stash diff display when reloading the stash view after a deleting.
 - Correctly identify and highlight the remote branch tracked by HEAD.
 - Pass --no-color after user defined arguments to ensure that colors do not
   break the output parsing. (GH #191)
 - Close stdin when pager mode is not supported.
 - Show newly created branches in the main view. (GH #196)

tig-1.2.1
---------

Incompatibilities:

 - Move manual and man pages to doc/ directory and rename AsciiDoc files
   to have .asciidoc as the extension to make them render on GitHub.

Improvements:

 - Show blob sizes in the tree view either as bytes or using binary unit
   prefixes. Example: `set show-file-size = units`. (GH #163)
 - Reduce main view memory usage and startup time, especially when revision
   graph rendering is disabled. (GH #160)

Bug fixes:

 - Fix submodule-related setup to check for non-zero return value from
   setenv(). (GH #188)

tig-1.2
-------

 - Tig now has its own tag on Stack Overflow, where users are invited to
   ask questions: http://stackoverflow.com/questions/tagged/tig

Improvements:

 - Prompt commands can be bound to keys. For example:
   `bind diff F :set diff-options = --full-diff`. (GH #69, #116)
 - Add a diff-options setting for specifying default diff options.
   Example: `set diff-options = --patience`. (GH #116)
 - Options in diff-options and blame-options matching Tig browsing state
   variables are replaced.
 - Show diff stats as wide as the terminal. (GH #109)